*** Don't forget to increment the version number in nfs.cl for each commit
*** [and leave this message at the top of the file]

*******************************************************************************
1.0.36 public release
*******************************************************************************

2002-09-20    <layer@HOBART>

	* Makefile: add `dist' rule; remove `makezip'

2002-09-20    <dancy@CANDY2K>
1.0.36

	* inc'd vrsion.

	* fhandle.cl:  Added func remove-fhandle-by-pathname to remove
	file handles for deleted files.

	* nfs.cl:  Reformatted code in a few places and replaced some if's
	with if*'s.

	Added func remove-statcache to uncached information that becomes
	invalid during a remove or rename.  This fixes a bug that existed
	in the rename operation.

2002-09-19    <dancy@CANDY2K>
1.0.35
	
	* mountd.cl: 
	*  Added debugging control variable *mountd-debug* for mountd
	operations.  And wrapped any debugging output w/ a test of this
	variable.  
	*  mountd now keeps track of mounts that are in use.  Added a
	function (showmounts) which displays the list.  The list isn't
	used for anything other than this.

	* nfs.cl:
	*  Made some output debugging-mode only.
	*  nfs-setattr now checks the return status of (truncate-file).

	* portmap.cl:
	*  Added *portmap-debug* variable and wrapped some debugging
	output w/ a test of this variable.

	* sunrpc.cl:
	*  Added *debugrpc* variable and wrapped some debugging output w/
	a test of this variable.

	* util.cl:
	*   Fixed ascii/unicode string problem in createfile.  This was
	preventing file truncation from working properly.
	
2002-07-24    <layer@HOBART>
1.0.34

	* Makefile: make 6.2 the default
	* sunrpc.cl: *gather* -> nil; add force-output's in rpc-send

*******************************************************************************
1.0.33 public release
*******************************************************************************

2002-02-27    <layer@HOBART>
1.0.33

	* nfs.ico: minorly updated