@@ -1,0 +1,201 @@
+	       Franz Binary Freeware License Agreement
+			      9/16/2002
+
+ATTENTION: READ CAREFULLY: By using, copying, or distributing the
+accompanying software you indicate your acceptance of the following
+Franz Binary Freeware License Agreement ("Agreement").
+
+1. LICENSE. Franz Inc. ("Franz") hereby grants you (each licensee is
+   addressed as "you") a non-exclusive, transferable license to use
+   its software product and accompanying documentation (the program's
+   object code and documentation are collectively referred to as the
+   "Software") on the following terms and only for non-commercial
+   purposes (see Section 2 below). You may:
+
+   a. use the Software on any computer in your possession;
+
+   b. make copies of the Software; and
+
+   c. distribute the Software (subject to the requirements of Section
+   3 below) only in the form originally furnished by Franz with no
+   modifications or additions whatsoever. If you have the slightest
+   doubt that your copy of the Software is not original, you must
+   contact Franz for an original copy.
+
+2. LIMITATIONS ON LICENSE. The license granted in Section 1 is subject
+   to the following restrictions:
+
+   a. The Software is to be used only for non-commercial purposes
+   unless you obtain Franz's prior written consent. Prohibited
+   commercial purposes include, but are not limited to:
+
+     (i) Selling, licensing or renting the Software to third parties
+     for a fee (by payment of money or otherwise, whether direct or
+     indirect);
+
+     (ii) Using the Software to provide services or products to others
+     for which you are compensated in any manner (by payment of money
+     or otherwise, whether direct or indirect), including, without
+     limitation, providing support or maintenance for the Software;
+
+     (iii) Using the Software to develop a similar application on any
+     platform for commercial distribution; or
+
+     (iv) Using the Software in any manner that is generally
+     competitive with a Franz product as defined by Franz.
+
+   b. However, media costs associated with the distribution of the
+   Software may be recovered. You shall use your best efforts to
+   promptly notify Franz upon learning of any violation of the above
+   commercial restrictions.
+
+   c. On each copy of the Software you must conspicuously and
+   appropriately reproduce Franz's copyright notices (see Software for
+   examples of such notices) and disclaimer of warranty; keep intact
+   this Agreement and all notices that refer to this Agreement or any
+   absence of warranty (whether written or interactively displayed);
+   and give any other recipients of the Software a copy of this
+   Agreement.
+
+   d. You may not modify, combine other commercial applications with,
+   or otherwise prepare derivative works of the Software.
+
+   e. In order to preserve the value of the Franz name and/or any
+   trademarks, service marks, trade dress adopted and/or used by Franz
+   from time to time, you shall not make use of any of them for any
+   reason (e.g., with respect to an Additional File, in advertising,
+   marketing your own products, press releases, or other publicity)
+   except solely as may be expressly authorized by this Agreement or
+   by the prior written consent of Franz.
+
+   f. Franz, in its sole and absolute discretion,  may have included a
+   portion of the source code or online documentation of the
+   Software. Except for any such portions, you shall not REVERSE
+   ENGINEER, DECOMPILE, DISASSEMBLE, OR OTHERWISE REDUCE ANY PORTION
+   OF THE SOFTWARE TO ANY HUMAN PERCEIVABLE FORM, except to the extent
+   this restriction is prohibited by applicable law.
+
+3. DISTRIBUTION: As used in this Agreement, the term "distribute" (and
+   its variants) includes making the Software available (either
+   intentionally or unintentionally) to third parties for copying or
+   use, including providing timeshare access. Each time you distribute
+   the Software, the recipient must expressly agree to comply with
+   these terms and conditions.  The recipient automatically receives
+   this license to use, copy, or distribute the Software subject to
+   these terms and conditions. You may not impose any further
+   restrictions on the recipients' exercise of the rights granted
+   herein. You are not responsible for enforcing compliance with this
+   Agreement by recipients.
+
+4. TITLE. Title, ownership rights, and intellectual property rights in
+   and to the Software, and each copy thereof (including all
+   copyrights therein), shall remain in Franz. The Software is
+   protected by the copyright laws of the United States and
+   international copyright treaties.
+
+5. NO FRANZ OBLIGATION. You are solely responsible for all of your
+   costs and expenses incurred in connection with the distribution of
+   the Software, and Franz shall have no liability, obligation or
+   responsibility therefor. Franz shall have no obligation to provide
+   maintenance, support, upgrades or new releases to you or to any
+   distributee of the Software.
+
+6. NO WARRANTY. THE SOFTWARE IS LICENSED FREE OF CHARGE, AND THERE IS
+   NO WARRANTY FOR THE SOFTWARE. FRANZ PROVIDES THE SOFTWARE "AS IS,"
+   AND FRANZ, ITS DISTRIBUTORS AND SUPPLIERS, AND ALL OTHER PERSONS
+   WHO HAVE BEEN INVOLVED IN THE CREATION, PRODUCTION, OR DELIVERY OF
+   THE SOFTWARE, DISCLAIM ALL CONDITIONS AND WARRANTIES OF ANY KIND,
+   EITHER EXPRESS, IMPLIED, STATUTORY, OR OTHERWISE, INCLUDING, BUT
+   NOT LIMITED TO, ANY CONDITIONS OR IMPLIED WARRANTIES OF
+   MERCHANTABILITY, SATISFACTORY QUALITY, AND FITNESS FOR A PARTICULAR
+   PURPOSE. THE ENTIRE RISK AS TO THE RESULTS, QUALITY AND PERFORMANCE
+   OF THE SOFTWARE IS WITH YOU AND YOUR DISTRIBUTEES. SHOULD THE
+   SOFTWARE PROVE DEFECTIVE, YOU AND YOUR DISTRIBUTEES (AND NOT FRANZ)
+   ASSUME THE COST OF ALL NECESSARY SERVICING, REPAIR OR CORRECTION.
+   FRANZ MAKES NO WARRANTY OF NONINFRINGEMENT OF THE INTELLECTUAL
+   PROPERTY RIGHTS OF THIRD PARTIES.
+
+7. LIMITATION OF LIABILITY. UNDER NO CIRCUMSTANCES AND UNDER NO LEGAL
+   THEORY, TORT, CONTRACT, OR OTHERWISE, SHALL FRANZ, ITS DISTRIBUTORS
+   AND SUPPLIERS, OR ANY OTHER PERSON WHO HAS BEEN INVOLVED IN THE
+   CREATION, PRODUCTION, OR DELIVERY OF THE SOFTWARE BE LIABLE TO YOU
+   OR ANY OTHER PERSON FOR ANY GENERAL, DIRECT, INDIRECT, SPECIAL,
+   INCIDENTAL, CONSEQUENTIAL, OR OTHER DAMAGES OF ANY CHARACTER
+   ARISING OUT OF THIS AGREEMENT OR THE USE OF OR INABILITY TO USE THE
+   SOFTWARE, INCLUDING BUT NOT LIMITED TO PERSONAL INJURY, LOSS OF
+   PROFITS, LOSS OF DATA, OUTPUT FROM THE SOFTWARE OR DATA BEING
+   RENDERED INACCURATE, FAILURE OF THE SOFTWARE TO OPERATE WITH ANY
+   OTHER PROGRAMS, DAMAGES FOR LOSS OF GOODWILL, BUSINESS
+   INTERRUPTION, COMPUTER FAILURE OR MALFUNCTION, OR ANY AND ALL OTHER
+   DAMAGES OR LOSSES OF WHATEVER NATURE, EVEN IF FRANZ HAS BEEN
+   INFORMED OF THE POSSIBILITY OF SUCH DAMAGES.
+
+8. INDEMNIFICATION. You and your distributees shall defend, indemnify
+   and hold harmless Franz, its distributors and suppliers, and all
+   other persons who have been involved in the creation, production,
+   or delivery of the Software, from any claim, demand, liability,
+   damage award, suit, judgment, or other legal action (including
+   reasonable attorney's fees) arising out of your use, distribution,
+   modification, or duplication of the Software.
+
+9. TERMINATION. The license granted hereunder is effective until
+   terminated by Franz. You may terminate it at any time by destroying
+   the Software. This license will terminate automatically if you fail
+   to comply with the limitations described above. On termination, you
+   must destroy all copies of the Software. The termination of your
+   license will not result in the termination of the licenses of any
+   distributees who have received rights to the Software through you
+   so long as they are in compliance with the provisions of this
+   Agreement.
+
+10. EXPORT CONTROLS. None of the Software or underlying information or
+    technology may be downloaded or otherwise exported or re-exported
+    into (or to a national or resident of) any country in violation of
+    the laws and administrative regulations of the United States
+    relating to the control of exports of commodities and technical
+    data. By downloading or using the Software, you are agreeing to
+    the foregoing and you are representing and warranting that you are
+    not located in, under the control of, or a national or resident of
+    any such country.
+
+11. U. S. GOVERNMENT USE. The Software and any accompanying
+    documentation are deemed to be "commercial computer software" and
+    "commercial computer software documentation," respectively,
+    pursuant to DFAR Section 227.7202 and FAR Section 12.212, as
+    applicable.  Any use, modification, reproduction, release,
+    performing, displaying or disclosing of the Software and
+    accompanying documentation by the U.S. Government shall be
+    governed solely by the terms of this Agreement and shall be
+    prohibited except to the extent expressly permitted by the terms
+    of this Agreement.  Contractor/manufacturer is Franz Inc., 555
+    12th St., Suite 1450, Oakland, CA 94607.
+ 
+12. MISCELLANEOUS. This Agreement represents the complete agreement
+    concerning this license between the parties and supersedes all
+    prior agreements and representations between them. It may not be
+    amended. If any provision of this Agreement is held to be
+    unenforceable for any reason, this Agreement shall terminate. This
+    Agreement shall be governed by and construed under California law
+    as such law applies to agreements between California residents
+    entered into and to be performed within California, except as
+    governed by U.S. federal law. The application of the United
+    Nations Convention on Contracts for the International Sale of
+    Goods is expressly excluded. Address all correspondence regarding
+    this license to:
+
+	Franz Inc.
+	Attn: Legal Department
+	555 12th St., Suite 1450
+	Oakland, CA  94607
+	510-452-2000
+	510-452-0182 (fax)
+
+Copyright and Trademark Notices:
+--------------------------------
+The Software is Copyright (c) Franz Inc. 1986-2002. All rights
+reserved. The documentation and all computer files are also Copyright
+(c) Franz Inc. 1986-2002. All rights reserved. These rights include
+but are not limited to any foreign language translations of the manual
+or the software, and all derivative works of both. The trademarks
+Allegro CL and Allegro Common Lisp are the property of Franz Inc. All
+other trademarks are the property of their respective owners.
